Tue Apr 26 14:38:20 2005                        Michael Jennings (mej)

Patch from Bryan Kadzban <bryan@kdzbn.homelinux.net> to fix unsetting
of bold/blink attribute.
----------------------------------------------------------------------
Wed Apr 27 14:46:41 2005                        Michael Jennings (mej)

Disable MMX on x86_64 for now.
----------------------------------------------------------------------
Sat May  7 02:30:53 2005                        Michael Jennings (mej)

Patch from Tres Melton <tres@mindspring.com> to correct overflow in
non-MMX 16bpp shading code.
----------------------------------------------------------------------
Sun May  8 21:13:45 2005                        Michael Jennings (mej)

Patch from Tres Melton <tres@mindspring.com> to fix 15bpp shading
routines.
----------------------------------------------------------------------
Tue May 10 14:57:45 2005                        Michael Jennings (mej)

Previous patch was incomplete; this fixes it.
----------------------------------------------------------------------
Sat May 14 18:56:55 2005                    Michael Frysinger (vapier)

Twin 0.4.6 and 0.5.1 install the header 'Tw/Tw1.h', not 'Tw/Tw_1.h'.
----------------------------------------------------------------------
Thu Jun  2 13:36:23 2005                        Michael Jennings (mej)

A couple small fixes from Yasufumi Haga <yasufumi.haga@nifty.com> to
the man page and the handling of multi-byte fonts.
----------------------------------------------------------------------
Mon Jun 13 19:28:19 2005                        Michael Jennings (mej)

Cleanups and optimizations from Tres Melton <tres@mindspring.com>.
----------------------------------------------------------------------
Tue Jun 14 15:36:09 2005                        Michael Jennings (mej)

Added SSE2 support patch thanks to Tres Melton <tres@mindspring.com>
and John Ellson <ellson@research.att.com>.
----------------------------------------------------------------------