@@ -98,6 +98,7 @@ enum {
   PROP_SELECTION_INCR,
   PROP_SELECTION_TARGETS,
   PROP_ENL_COMMS,
+  PROP_ENL_VERSION,
   PROP_ENL_MSG,
   PROP_DELETE_WINDOW,
   PROP_DND_PROTOCOL,
